# django-fias

./: .gitignore  README.md  README.rst  conftest.py  manage.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: dev.yml
fias/: apps.py  config.py  enum.py  routers.py
fias/importer/: commands.py  downloader.py  filters.py  loader.py  log.py  signals.py  table_validator.py  timer.py  validators.py  version.py
fias/importer/source/: __init__.py  archive.py  directory.py  tablelist.py  wrapper.py
fias/importer/table/: __init__.py  table.py  xml.py
fias/management/commands/: fias.py  fias_benchmark.py  fias_duplicates.py  fiasinfo.py  validate_house_params.py
fias/migrations/: 0001_initial.py  0002_alter_admhierarchy_parentobjid_alter_house_housetype_and_more.py
fias/models/: __init__.py  addr_obj.py  address.py  addrobj.py  common.py  fields.py  hierarchy.py  house.py  normdoc.py  socrbase.py  stead.py  version.py
fias/suggest/backends/noop/: urls.py
fias/suggest/backends/sphinx/: urls.py  views.py
fias/tests/: fixture.py  info.py  test_commands.py  test_importer_validators.py  test_imports.py  test_indexes.py  test_router.py  test_tablelists.py  test_tables.py  test_wrappers.py
fias/tests/data/: test_fias_create.csv  test_fias_update.csv  test_validate_house_params.csv
fias/tests/data/fake/: gar_99.rar
fias/tests/data/fake/deltas/: gar_delta_99.rar  gar_delta_99_20221128.rar  gar_delta_99_20221202.rar
fias/tests/data/fixtures/: gar_99.json
fias/tests/mock/: models.py  wrapper.py
gar_loader/: .gitignore  compat.py  indexes.py  manage.py  settings.py  wsgi.py
gar_loader/gar_loader/: asgi.py  settings.py  wsgi.py
tests/: test_wrappers.py
